--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
+      name: 'ACTEA Base Course',
       repo: '',
       loadSidebar: true,
-      subMaxLevel: 2
+      subMaxLevel: 2,
+      basePath:'https://actea-erasmus.github.io/base-course'
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
